Fixed issues with horizontal scroll

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   font-family: 'Nunito', sans-serif;
   background-color: #f5f5f5;
   color: #636b6f;
+  overflow-x: hidden;
 }
 
 .full-height {
